# renum

./: .gitignore  ANALISE_COMPARATIVA_FUNCIONALIDADES_RENUM.md  FINAL_PRODUCTION_ANALYSIS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_GAPS_ANALYSIS.md  README-PRODUCTION.md  README.md  README_renum_subdir.md  RELATORIO_ANALISE_IMPLEMENTACAO_RENUM.md  deploy-production.sh  docker-compose.production.yml  index.html  package-lock.json  package.json  renum-backend-migration-work-kiro.tgz  renum-backend-snapshot.tar  tailwind.config.ts
apps/api/: .env.production.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-sandbox.txt  run_tests.py  sandbox.Dockerfile  setup_executions_table.sql  setup_supabase.sql  start_server.py  test_api.py  test_complete.py  test_endpoints.py  test_integration.py  test_integrations.py  test_simple.py  test_supabase.py
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: agent_registry.py  base_agent.py  sa_gmail.py  sa_http_generic.py  sa_supabase.py  sa_telegram.py  sa_whatsapp.py
apps/api/app/api/v1/: admin.py  agent_manifests.py  agent_registry.py  agents.py  analytics.py  auth.py  credentials.py  data_purge.py  executions.py  fallback.py  health.py  integrations.py  keys.py  manifest_cache.py  orchestrator.py  prompt_editor.py  sandbox.py  teams.py  webhooks.py  websocket.py
apps/api/app/core/: config.py  sandbox_config.py  security.py
apps/api/app/domain/: __init__.py  agent.py  credentials.py  execution.py  integration.py  orchestrator.py  team.py
apps/api/app/infra/suna/: __init__.py  (+1 more)
apps/api/app/middleware/: admin_auth.py  audit_logging.py  auth.py  jwt_auth.py  metrics.py  pii_masking.py  rate_limit.py  security_headers.py  validation.py
apps/api/app/repositories/: agent_repository.py  credentials_repository.py  execution_repository.py  integration_repository.py  orchestrator_repository.py  workflow_repository.py
apps/api/app/schemas/: admin.py  agent.py  agent_manifest.py  auth.py  base.py  credentials.py  execution.py  integration.py  keys.py  orchestrator.py  prompt_editor.py  sandbox.py  team.py
apps/api/app/services/: admin_service.py  agent_manifest_service.py  agent_registry_service.py  alerting_service.py  analytics_service.py  billing_service.py  data_purge_service.py  encryption_service.py  execution_service.py  fallback_service.py  integration_service.py  manifest_cache_service.py  orchestrator_service.py  performance_monitor.py  pii_service.py  prompt_editor_service.py  sandbox_service.py  signature_service.py  suggestion_engine.py  third_party_connectors.py  user_credentials_service.py  webhook_service.py
apps/api/app/usecases/: execution_service.py  team_service.py
apps/api/migrations/: 001_multi_agent_system_schema.sql  002_rls_policies.sql  003_triggers_and_functions.sql  004_initial_data.sql  README.md  run_migrations.py
apps/api/renum_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: deploy.sh  dev.sh
apps/api/tests/: README.md  __init__.py  conftest.py  test_admin.py  test_agent_registry.py  test_analytics.py  test_api_documentation.py  test_credentials.py  test_execution_engine.py  test_executions.py  test_fallback.py  test_integration_complete.py  test_integration_webhooks.py  test_manifest_cache.py  test_orchestrator.py  test_performance.py  test_pii_compliance.py  test_prompt_editor.py  test_public_keys.py  test_sandbox.py  test_security_comprehensive.py  test_security_middleware.py  test_sub_agents.py  test_teams.py
(+97 files in other folders)
